tests/machine/x/cpp/membership.error
line 16: ../../../tests/machine/x/cpp/membership.cpp:16:33: error: exponent has no digits
   16 |     print((std::find(2.begin(), 2.end(), nums) != 2.end()));
      |                                 ^~~~~
../../../tests/machine/x/cpp/membership.cpp:16:51: error: exponent has no digits
   16 |     print((std::find(2.begin(), 2.end(), nums) != 2.end()));
      |                                                   ^~~~~
../../../tests/machine/x/cpp/membership.cpp:17:33: error: exponent has no digits
   17 |     print((std::find(4.begin(), 4.end(), nums) != 4.end()));
      |                                 ^~~~~
../../../tests/machine/x/cpp/membership.cpp:17:51: error: exponent has no digits
   17 |     print((std::find(4.begin(), 4.end(), nums) != 4.end()));
      |                                                   ^~~~~
../../../tests/machine/x/cpp/membership.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/membership.cpp:16:22: error: unable to find numeric literal operator ‘operator""begin’
   16 |     print((std::find(2.begin(), 2.end(), nums) != 2.end()));
      |                      ^~~~~~~
../../../tests/machine/x/cpp/membership.cpp:16:22: note: use ‘-fext-numeric-literals’ to enable more built-in suffixes
../../../tests/machine/x/cpp/membership.cpp:17:22: error: unable to find numeric literal operator ‘operator""begin’
   17 |     print((std::find(4.begin(), 4.end(), nums) != 4.end()));
      |                      ^~~~~~~
../../../tests/machine/x/cpp/membership.cpp:17:22: note: use ‘-fext-numeric-literals’ to enable more built-in suffixes

 15 |     auto nums = std::vector<int>{1, 2, 3};
 16 |     print((std::find(2.begin(), 2.end(), nums) != 2.end()));
 17 |     print((std::find(4.begin(), 4.end(), nums) != 4.end()));
